# switch_vis_exp

./: CMakeLists.txt  LICENSE  package.xml  readMultiBag.py
launch/: control.launch  estimator.launch  estimators.launch  exp.launch  model_learning.launch  setup.launch  sim.launch  sim_ekf.launch  uio.launch
msg/: Debug.msg  Output.msg  Velocity.msg
scripts/: exp.py.bak  model_learning.py  sim.py  sim_uio.launch  sim_uio.py  turtlebot_control.py  uio_node.py
src/: bebop_control_node.cpp  ekf_node.cpp  exp_node.cpp  filter.cpp  filter_node.cpp  model_learning_node.cpp  sim.cpp  sim_node.cpp  turtlebot_control_node.cpp  velocity_map_node.cpp
srv/: CLdata.srv  MapVel.srv  RoadMap.srv
